src/.vitepress/theme/styles/layout/footer.css
/* - - - - - - - Footer - - - - - - - */

.VPFooter {
    display: none !important;
}

.site-footer {
    border-top: 1px solid var(--vp-c-divider);
    background: var(--vp-c-bg);
    padding: 24px;
}
.site-footer a {
    color: var(--vp-c-text-3);
    transition: color 0.2s;
    text-decoration: none;
    font-size: 12px;
}
.site-footer a:hover {
    color: var(--vp-c-text-1);
}

.site-footer-inner {
    justify-content: space-between;
    flex-direction: column;
    align-items: center;
    text-align: center;
    display: flex;
    margin: 0 auto;
    max-width: 1152px;
}

.site-footer-copy {
    color: var(--vp-c-text-3);
    font-size: 12px;
}

/* ----- Links ----- */

.site-footer-links {
    justify-content: center;
    align-items: center;
    display: flex;
    gap: 6px;
}

/* ----- Dot ----- */

.site-footer-dot {
    background: var(--vp-c-text-3);
    border-radius: 50%;
    height: 3px;
    width: 3px;
}

